# terraspiel

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  plan.md  prompt.md  todo.md
public/: elements.json  rules.json
shaders/: blur.wgsl  composite.wgsl  dot.wgsl  physics.wgsl
src/: App.css  App.tsx  app.rs  event_handler.rs  gui.rs  index.css  input.rs  main.rs  main.tsx  material.rs  naming.rs  render.rs  renderer.rs  ui.rs
src/components/: PhaserGame.tsx  StatsPanel.tsx  Toolbar.tsx
src/core/: camera.rs  engine.rs  generation.rs  material.rs  mod.rs  player.rs  rng.rs  seed_generator.rs  world.rs
src/core/biomes/: desert.rs  forest.rs  mod.rs  plains.rs  snowland.rs
src/game/: GameScene.ts  physics.ts  rules.ts  transformation.ts
src/game/behaviors/: cloudBehavior.ts  crystalBehavior.ts  etherBehavior.ts  fireBehavior.ts  fireParticleBehavior.ts  granularBehavior.ts  mudBehavior.ts  oilBehavior.ts  plantBehavior.ts  plantGrowthBehavior.ts  soilBehavior.ts  thunderBehavior.ts  waterBehavior.ts
src/physics/: collision_helpers.rs  engine.rs  gas.rs  liquid.rs  mod.rs  solid.rs  state_manager.rs
src/render/: render.rs
src/renderer/: gui.rs  mod.rs  orchestrator.rs  wgpu_render.rs
src/stores/: gameStore.ts
src/types/: elements.ts  worleyjs.d.ts
src/ui/: controls.rs
src/utils/: colors.ts  noise.ts  worldGenerator.ts
