[package]
name = "terraspiel"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
winit = { version = "0.29", features = ["default", "rwh_05"] }
wgpu = "0.20"
serde = { version = "1.0", features = ["derive"] }
palette = "0.7"
pollster = "0.3"
bytemuck = { version = "1.0", features = ["derive"] }
# GUI
egui = "0.28"
egui-winit = "0.28"
egui-wgpu = "0.28"
